--- a/README
+++ b/README
@@ -4,11 +4,12 @@ GIMLi - Geophysical Inversion and Modelling Library
 Prerequisites
 =============
 
-    . subversion, cmake, git
-    . gcc
+    . subversion, git
+    . cmake >= 2.8.10
+    . gcc >= 4.4
         tested: gentoo x86_64: gcc-4.4.5, gcc-4.5.3, gcc-4.5.4
-                OpenSuse 11.4 x86_64: gcc-4
                 Debian 3.2.46-1 x86_64: gcc-4.7.2
+                Ubuntu 
                 MinGW32: gcc-4.6.2/4
                 MinGW64: gcc-4.5.4 (without python bindings)
     . libboost >=1.48 (thread, [python])
@@ -24,9 +25,9 @@ Optional some can be installed via script
     . procps
     . gccxml, pygccxml and pyplusplus (via script)
     . matplotlib >=1.1.0
-        
+    . doxygen        
 
-#### Example Installation on Vanilla Ubuntu ####
+#### Example Installation on Vanilla Debian ####
 
 First install some of the necessary stuff.
 For sure you will need subversion to get the source files and some things for the tool-chain
@@ -35,11 +36,13 @@ For sure you will need subversion to get the source files and some things for th
 
     sudo apt-get install libboost-all-dev libblas-dev liblapack-dev
 
-Optional install usefullstuff:
+Optional install useful stuff:
 
     sudo apt-get install libcppunit-dev libprocps0-dev
 
     sudo apt-get install python-matplotlib
+
+    sudo apt-get install doxygen
 
 Create a directory for your installation, e.g., $HOME/src
 
@@ -101,53 +104,20 @@ and configure the build:
     
     cmake ../trunk
 
-To build the library just run make
-    
-    make
-
-
-
-#### Example Installation on Windows ####
-
-Dependencies for python bindings
-================================
-
-Python bindings are generally a good idea because some tools depend on it. 
-If you just want the libgimli library you can skip this part
-
-we need gccxml, pygccxml and pyplusplus
-
-bash libgimli/trunk/python/buildScripts/buildToolChain.sh
-
-
-
-####Linux systems####
-For *Linux* user prepare and configure the build
-    
-    cmake ../trunk
+If the output complains some missing dependencies you want to install .. just install these and repeat the the last step. 
 
 To build the library just run make
     
     make
 
-####Windows i.e. Mingw systems####
-For *Mingw* users it should be preferable to generate for msys makefiles
+The libraries will be installed in build/lib and some test applications are installed in build/bin
 
-    cmake -D CMAKE_INSTALL_PREFIX=../gimli-install -G 'MSYS Makefiles' ../trunk
-
-cmake provide interactive configuration and fine tuning with. Window user will probably adjust the boost-include and boost-library paths.
-
-    cmake-gui ../trunk #for MS Windows user
-
-To build the library just run make
+If you want to build the python bindings call
     
-    make
-
-####Interesting make targets####
-
-You may want to build python bindings by by running:
-
     make pygimli
+
+the _pygimli_.so library will be copied into the source path ../trunk/python/pygimli. 
+And some useful python apps will be 
 
 You can test your build:
 
@@ -159,94 +129,53 @@ If you have doxygen installed, you can create the api documentation:
 
     make html
 
+#### Installation on Windows ####
 
-####Using cmake with CodeBlocks####
+##### Windows i.e. Mingw systems #####
 
-
-
-
-
-
-
-
-
-
-
-
-
-Tested with:
-    gentoo x86_64 gcc-4.4.5, gcc-4.5.3, gcc-4.5.4
-	OpenSuse 11.4 x86_64 gcc-4
-    mingw win32 gcc-4.6.2/4 (gcc-4.7.0 DOES NOT WORK!!!!! strange segfault while dll call)
-    mingw win64 gcc-4.5.4 (without python bindings)
-
-
-BUILD (for Windows systems)
-
-Please look into the directory mingw and the README file therein
-
-BUILD (for posix systems such as Linux, Unix, MacOS):
-
-Prerequisites:
-You will need at least (incomplete for now):
-	automake>=1.11
-	gcc>=4.4.5 (just for some boost stuff that uses long long)
-	...
-
-For the first time after initial svn checkout:
-
-./autogen.sh
-make
-
-If you install from source-package
-./configure
-make
-
-After further svn update:
-make 
-
-
-OPTIONAL EXTERNALS:
-
-for the testsuite
-cppunit (http://sourceforge.net/projects/cppunit)
-
-support for light-weight linear solver (LDL):
-amd (http://www.cise.ufl.edu/research/sparse/amd/)
-ldl (http://www.cise.ufl.edu/research/sparse/ldl/)
-
-support for advanced linear solvers:
-blas                    
-lapack                  
-colamd                  
-camd                    
-cholmod                 
-(http://www.cise.ufl.edu/research/sparse/SuiteSparse/)
-
-support for 2d mesh-generation:
-triangle                
-
-You can build triangle and suitesparse by calling the Makefile in the external directory
-
-
-Windows toolchain:
+First install mingw and msys to get a proper gcc an and the msys console
 
 mingw-4.5.0 & msys-1.0.15
     automatic installer: http://sourceforge.net/projects/mingw/files/
     tested: mingw-get-inst-20100909.exe
     
-codeblocks
+The installation is common to the linux way with some small differences.
+
+Prepare the directory structure like described above:
+If you don't have a proper boost installation you can install them yourself:
+
+    sh glimli/trunk/python/buildScripts/buildBoostWin32.sh
+
+The build is performed via cmake. While calling cmake *Mingw* users should be preferable generate for msys makefiles:
+
+    cmake -G 'MSYS Makefiles' ../trunk
+
+cmake provide an interactive configuration and fine tuning, e.g., for adjusting the boost-include and boost-library paths.
+
+    cmake-gui ../trunk #for MS Windows user
+
+To build the library just run make
+    
+    make
+
+##### Using cmake with CodeBlocks #####
+
+First, for sure, you need codeblocks
     from: http://www.codeblocks.org/downloads/26
     tested: codeblocks-10.05-setup.exe
     change codeblocks toolchain (setting/Compiler & Debugger../) 
         to c:/mingw or MinGW64 base directory
 
-cmake >=2.8.7		
+to come ....
 
+#### Example Installation on Ubuntu ####
+
+    mkdir -p ~/src
+    cd ~/src
+
+
+-- deprecated ------------ 
 Add boost include path to the build:
-
-CPPFLAGS='-I /c/home/boost/include' ./configure
-
 
 Step by step: what I did on vanilla win7-64bin:
 win7-64.prof, gcc-4.6.1, boost-1.48.0, python-2.7.2	
