work on sphinx docu framework

--- a/doc/libgimli.bib
+++ b/doc/libgimli.bib
@@ -1,8 +1,23 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF8
 
+@ARTICLE{BergmannSchKie2012,
+  author = {Peter Bergmann and Cornelia Schmidt-Hattenberger and Dana Kiessling
+	and Carsten Rücker and Tim Labitzke and Jan Henninges and Gunther
+	Baumann and Hartmut Schütt},
+  title = {{S}urface-downhole electrical resistivity tomography applied to monitoring
+	of {CO}2 storage at {K}etzin, {G}ermany},
+  journal = {Geophysics},
+  year = {2012},
+  volume = {77},
+  pages = {B253-B267},
+  number = {6},
+  owner = {carsten},
+  timestamp = {2012.09.27}
+}
+
 @ARTICLE{GuentherRueSpi2006,
-  author = {T. Günther and C. Rücker and K. Spitzer},
+  author = {Thomas Günther and Carsten Rücker and Klaus Spitzer},
   title = {{T}hree-dimensional modelling and inversion of dc resistivity data
 	incorporating topography -- {II}. {I}nversion},
   journal = {Geophys. J. Int.},
@@ -23,9 +38,8 @@
   journal = {Geophysics},
   year = {2011},
   volume = {76},
-  pages = {F227-–F238},
+  pages = {F227-F238},
   number = {4},
-  note = {Eingereicht am 20. Juli},
   doi = {10.1190/1.3581356},
   file = {RueckerGuen2011.pdf:all/RueckerGuen2011.pdf:PDF},
   owner = {carsten},
@@ -45,5 +59,15 @@
   owner = {carsten},
   printout = {yes},
   timestamp = {2012.04.11}
+}
+
+@BOOK{Zienkiewicz1977,
+  title = {{T}he {F}inite {E}lement {M}ethod},
+  publisher = {McGraw-Hill, London},
+  year = {1977},
+  author = {O. C. Zienkiewicz},
+  edition = {3rd},
+  owner = {carsten},
+  timestamp = {2010.03.29}
 }
 
