added some matlab files, some minors in documentation

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -1,5 +1,71 @@
-% This file was created with JabRef 2.6.
+% This file was created with JabRef 2.9.2.
 % Encoding: UTF8
+
+@ARTICLE{ChenDavHag+2009,
+  author = {Y. Chen and T. A. Davis and W. W. Hager and S. Rajamanickam},
+  title = {{A}lgorithm 887: {CHOLMOD}, supernodal sparse {C}holesky factorization
+	and update/downdate},
+  journal = {ACM Trans. Math. Software},
+  year = {2009},
+  volume = {35},
+  pages = {No.: 22},
+  number = {3},
+  file = {ChenDavHag+2009.pdf:all/ChenDavHag+2009.pdf:PDF},
+  owner = {carsten},
+  timestamp = {2010.04.09}
+}
+
+@ARTICLE{GeuzaineRemacle2009,
+  author = {Geuzaine, C. and Remacle, J.-F.},
+  title = {{G}msh: a three-dimensional finite element mesh generator with built-in
+	pre- and post-processing facilities},
+  journal = {International Jounral for Numerical Methods in Engineering},
+  year = {2009},
+  volume = {79},
+  pages = {1309-1331},
+  owner = {fwagner},
+  timestamp = {2011.05.30}
+}
+
+@INCOLLECTION{shewchuk96b,
+  author = {Jonathan Richard Shewchuk},
+  title = {{T}riangle: {E}ngineering a {2D} {Q}uality {M}esh {G}enerator and
+	{D}elaunay {T}riangulator},
+  booktitle = {Applied Computational Geometry: Towards Geometric Engineering},
+  publisher = {Springer-Verlag},
+  year = {1996},
+  editor = {Ming C. Lin and Dinesh Manocha},
+  volume = {1148},
+  series = {Lecture Notes in Computer Science},
+  pages = {203--222},
+  month = may,
+  note = {From the First ACM Workshop on Applied Computational Geometry},
+  owner = {Dlugosch.R},
+  timestamp = {2013.04.15}
+}
+
+@MANUAL{tetgen,
+  title = {{T}et{G}en - a quality-constrained tetrahedral mesh generator},
+  author = {H. Si},
+  organization = {Weierstrass institute, Berlin},
+  address = {\url{http://tetgen.berlios.de}},
+  year = {2002-2008},
+  owner = {halbmy},
+  timestamp = {2008.05.19}
+}
+
+@TECHREPORT{Si2004,
+  author = {Hang Si},
+  title = {{T}et{G}en. {A} 3{D} {D}elaunay tetrahedral mesh generator. v.1.3},
+  institution = {WIAS},
+  year = {2004},
+  type = {Users manual},
+  number = {4},
+  file = {Si2004.pdf:all/Si2004.pdf:PDF},
+  owner = {carsten},
+  printout = {yes},
+  timestamp = {2013.08.28}
+}
 
 @BOOK{Zienkiewicz1977,
   title = {{T}he {F}inite {E}lement {M}ethod},
