made doxylink compatible with both python versions

--- a/doc/tutorial/firstexample.tex
+++ b/doc/tutorial/firstexample.tex
@@ -91,30 +91,30 @@ All existing modelling classes can be used, but it is also easy to create new mo
 
 We exemplify this by the preceding example.
 First, the library must be imported.
-To avoid name clashes with other libraries we suggest to import it to an easy name, e.g. by using \lstinline|import pygimli as g|.
-As a result, all gimli objects (classes and functions) can be referred to with a preceding \lstinline|g.|, e.g. \lstinline|g.RVector| is the real vector \lstinline|RVector|.
+To avoid name clashes with other libraries we suggest to import it to an easy name, e.g. by using \lstinline|import pygimli as pg|.
+As a result, all gimli objects (classes and functions) can be referred to with a preceding \lstinline|pg.|, e.g. \lstinline|pg.RVector| is the real vector \lstinline|RVector|.
 Next, the modelling class is derived from ModellingBase, a constructor is defined and the response function is defined.
 \begin{lstlisting}[language=python]
-import pygimli as g
-class FunctionModelling( g.ModellingBase ):
+import pygimli as pg
+class FunctionModelling( pg.ModellingBase ):
     # constructor
     def __init__( self, nc, xvec, verbose = False  ):
-        g.ModellingBase.__init__( self, verbose )
+        pg.ModellingBase.__init__( self, verbose )
         self.x_ = xvec
         self.nc_ = nc
         self.regionManager().setParameterCount( nc )
     # response function
     def response( self, par ):
-        y = g.RVector( self.x_.size(), par[ 0 ] )
+        y = pg.RVector( self.x_.size(), par[ 0 ] )
         for i in range( 1, self.nc_ + 1 ):
-            y += g.pow( self.x_, i ) * par[ i ];
+            y += pg.pow( self.x_, i ) * par[ i ];
         return y;
     # start model
     def startModel( self ):
-        return g.RVector( self.nc_, 0.5 )
+        return pg.RVector( self.nc_, 0.5 )
 \end{lstlisting}
 
-The pygimli library must once be imported (in this case under the name g) and all classes (e.g. modelling operators) can be used by g.classname, e.g. g.RVector is the already known vector of real (double) values.
+The pygimli library must once be imported (in this case under the name g) and all classes (e.g. modelling operators) can be used by pg.classname, e.g. pg.RVector is the already known vector of real (double) values.
 
 The main program is very easy then and the code is very similar to C++.
 Data are loaded, both forward operator and inversion are created.
@@ -122,19 +122,19 @@ Inversion options are set and it the result of run is save to a file.
 That's it.
 
 \begin{lstlisting}[language=python]
-    xy = g.RMatrix()
-    g.loadMatrixCol( xy, datafile );
+    xy = pg.RMatrix()
+    pg.loadMatrixCol( xy, datafile );
     # two coefficients and x-vector (first data column)
     f = FunctionModelling( options.np + 1, xy[ 0 ] )
     # initialize inversion with data and forward operator and set options
-    inv = g.RInversion( xy[ 1 ], f );
+    inv = pg.RInversion( xy[ 1 ], f );
     # constant absolute error of 0.01 (not necessary, only for chi^2)
     inv.setAbsoluteError( 0.01 );
     # the problem is well-posed and does not need regularization
     inv.setLambda( 0 );
     # actual inversion run yielding coefficient model
     coeff = inv.run();
-    g.save( coeff, "out.vec" );
+    pg.save( coeff, "out.vec" );
 \end{lstlisting}
 
 As a main advantage of Python, the actual computations can be easily combined with post-processing or visualization, even building graphical user-interfaces. 
@@ -157,7 +157,7 @@ The output is illustrated for two a synthetic function $y=2.1x+1.1$ noisified wi
 \end{figure}
 
 In the following we continue the description with C++ but all are provided as well in Python without significant code changes.
-Main exception is the non-existence of declarations, e.g. the C++ declaration \lstinline|GIMLi::RTransLogLU mytrans( lower, upper );| in Python would be written \lstinline|mytrans = g.RTransLogLU( lower, upper)|.
+Main exception is the non-existence of declarations, e.g. the C++ declaration \lstinline|GIMLi::RTransLogLU mytrans( lower, upper );| in Python would be written \lstinline|mytrans = pg.RTransLogLU( lower, upper)|.
 Whereas it is common to work in name spaces in C++, in python function conflicts easily appear due to lack of declaration.
 To avoid that, we recommend importing modules as such, e.g. \lstinline|import pylab as P| and \lstinline|import pygimli as g|.
 
