add support for mylatex-commands.sty in plot2rst for latex|pngmath|mathjax. Note, only simple commands can be translateted. See mylatex-commands.sty.

--- a/doc/_static/mylatex-commands.sty
+++ b/doc/_static/mylatex-commands.sty
@@ -1,13 +1,13 @@
-\newcommand{\arr}[1]{\ensuremath{\textbf{#1}}}
-\newcommand{\transpose}[1]{\ensuremath{{#1}^{\text{T}}}}
+\newcommand{\arr}[1]{\textbf{#1}}
+\newcommand{\transpose}[1]{{#1}^{\text{T}}}
 
-\renewcommand{\d}{\ensuremath{\,\operatorname{d}}}
-\newcommand{\e}{\ensuremath{\operatorname{e}}}
-\renewcommand{\i}{\ensuremath{\operatorname{i}}}
+\renewcommand{\d}{\,\operatorname{d}}
+\newcommand{\e}{\operatorname{e}}
+\renewcommand{\i}{\operatorname{i}}
 
 \newcommand{\m}{\arr{m}}
 \newcommand{\f}{\arr{f}}
 \newcommand{\A}{\arr{A}}
 
-\newcommand{\fourierT}{\ensuremath{\multimap}}
-\newcommand{\ifourierT}{\ensuremath{\multimap_{\text{I}}}}
+\newcommand{\fourierT}{\multimap}
+\newcommand{\ifourierT}{\multimap_{\text{I}}}
