up sparsematrix operators

--- a/doc/_static/mylatex-commands.sty
+++ b/doc/_static/mylatex-commands.sty
@@ -1,4 +1,5 @@
 \newcommand{\arr}[1]{\textbf{#1}}
+\newcommand{\u}[1]{\,\text{#1}}
 \newcommand{\transpose}[1]{{#1}^{\text{T}}}
 
 \renewcommand{\d}{\,\operatorname{d}}
