--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -1,4 +1,4 @@
-% This file was created with JabRef 2.9.2.
+% This file was created with JabRef 2.6.
 % Encoding: UTF8
 
 @ARTICLE{ChenDavHag+2009,
@@ -27,7 +27,7 @@
   timestamp = {2011.05.30}
 }
 
-@INCOLLECTION{shewchuk96b,
+@INCOLLECTION{Shewchuk96b,
   author = {Jonathan Richard Shewchuk},
   title = {{T}riangle: {E}ngineering a {2D} {Q}uality {M}esh {G}enerator and
 	{D}elaunay {T}riangulator},
@@ -65,6 +65,19 @@
   owner = {carsten},
   printout = {yes},
   timestamp = {2013.08.28}
+}
+
+@ARTICLE{SinghGup2001,
+  author = {Bijendra Singh and D. Guptasarma},
+  title = {{N}ew method for fast computation of gravity and magnetic anomalies
+	from arbitrary polyhedra},
+  journal = {Geophysics},
+  year = {2001},
+  volume = {66},
+  pages = {521-526},
+  file = {SinghGup2001.pdf:all/SinghGup2001.pdf:PDF},
+  owner = {carsten},
+  timestamp = {2013.10.10}
 }
 
 @BOOK{Zienkiewicz1977,
