some health + add support for animation in plt2rst

--- a/doc/_static/mylatex-commands.sty
+++ b/doc/_static/mylatex-commands.sty
@@ -1,6 +1,7 @@
 \newcommand{\arr}[1]{\textbf{#1}}
-\newcommand{\u}[1]{\,\text{#1}}
+\renewcommand{\u}[1]{\,\text{#1}}
 \newcommand{\transpose}[1]{{#1}^{\text{T}}}
+\newcommand{\grad}{\nabla}
 
 \renewcommand{\d}{\,\operatorname{d}}
 \newcommand{\e}{\operatorname{e}}
