mostly formatting (PEP8), conventions and some style and grammar issues

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -1,30 +1,31 @@
-% This file was created with JabRef 2.6.
+% This file was created with JabRef 2.10.
 % Encoding: UTF8
 
-@ARTICLE{ChenDavHag+2009,
-  author = {Y. Chen and T. A. Davis and W. W. Hager and S. Rajamanickam},
-  title = {{A}lgorithm 887: {CHOLMOD}, supernodal sparse {C}holesky factorization
-	and update/downdate},
-  journal = {ACM Trans. Math. Software},
-  year = {2009},
-  volume = {35},
-  pages = {No.: 22},
-  number = {3},
-  file = {ChenDavHag+2009.pdf:all/ChenDavHag+2009.pdf:PDF},
-  owner = {carsten},
-  timestamp = {2010.04.09}
+
+@Article{ChenDavHag+2009,
+  Title                    = {{A}lgorithm 887: {CHOLMOD}, supernodal sparse {C}holesky factorization and update/downdate},
+  Author                   = {Y. Chen and T. A. Davis and W. W. Hager and S. Rajamanickam},
+  Journal                  = {ACM Trans. Math. Software},
+  Year                     = {2009},
+  Number                   = {3},
+  Pages                    = {No.: 22},
+  Volume                   = {35},
+
+  File                     = {ChenDavHag+2009.pdf:all/ChenDavHag+2009.pdf:PDF},
+  Owner                    = {carsten},
+  Timestamp                = {2010.04.09}
 }
 
-@ARTICLE{GeuzaineRemacle2009,
-  author = {Geuzaine, C. and Remacle, J.-F.},
-  title = {{G}msh: a three-dimensional finite element mesh generator with built-in
-	pre- and post-processing facilities},
-  journal = {International Jounral for Numerical Methods in Engineering},
-  year = {2009},
-  volume = {79},
-  pages = {1309-1331},
-  owner = {fwagner},
-  timestamp = {2011.05.30}
+@Article{GeuzaineRemacle2009,
+  Title                    = {{G}msh: a three-dimensional finite element mesh generator with built-in pre- and post-processing facilities},
+  Author                   = {Geuzaine, C. and Remacle, J.-F.},
+  Journal                  = {International Jounral for Numerical Methods in Engineering},
+  Year                     = {2009},
+  Pages                    = {1309-1331},
+  Volume                   = {79},
+
+  Owner                    = {fwagner},
+  Timestamp                = {2011.05.30}
 }
 
 @INCOLLECTION{Shewchuk96b,
@@ -44,27 +45,30 @@
   timestamp = {2013.04.15}
 }
 
-@MANUAL{tetgen,
-  title = {{T}et{G}en - a quality-constrained tetrahedral mesh generator},
-  author = {H. Si},
-  organization = {Weierstrass institute, Berlin},
-  address = {\url{http://tetgen.berlios.de}},
-  year = {2002-2008},
-  owner = {halbmy},
-  timestamp = {2008.05.19}
+@Manual{tetgen,
+  Title                    = {{T}et{G}en - a quality-constrained tetrahedral mesh generator},
+
+  Address                  = {\url{http://tetgen.org}},
+  Author                   = {H. Si},
+  Organization             = {Weierstrass institute, Berlin},
+  Year                     = {2002-2008},
+
+  Owner                    = {halbmy},
+  Timestamp                = {2008.05.19}
 }
 
-@TECHREPORT{Si2004,
-  author = {Hang Si},
-  title = {{T}et{G}en. {A} 3{D} {D}elaunay tetrahedral mesh generator. v.1.3},
-  institution = {WIAS},
-  year = {2004},
-  type = {Users manual},
-  number = {4},
-  file = {Si2004.pdf:all/Si2004.pdf:PDF},
-  owner = {carsten},
-  printout = {yes},
-  timestamp = {2013.08.28}
+@TechReport{Si2004,
+  Title                    = {{T}et{G}en. {A} 3{D} {D}elaunay tetrahedral mesh generator. v.1.3},
+  Author                   = {Hang Si},
+  Institution              = {WIAS},
+  Year                     = {2004},
+  Number                   = {4},
+  Type                     = {Users manual},
+
+  File                     = {Si2004.pdf:all/Si2004.pdf:PDF},
+  Owner                    = {carsten},
+  Printout                 = {yes},
+  Timestamp                = {2013.08.28}
 }
 
 @ARTICLE{SinghGup2001,
@@ -90,11 +94,11 @@
   timestamp = {2010.03.29}
 }
 
-@comment{jabref-meta: selector_publisher:}
-
-@comment{jabref-meta: selector_author:}
+@comment{jabref-meta: selector_keywords:}
 
 @comment{jabref-meta: selector_journal:}
 
-@comment{jabref-meta: selector_keywords:}
+@comment{jabref-meta: selector_publisher:}
+
+@comment{jabref-meta: selector_author:}
 
