add seismics package

--- a/doc/_static/mylatex-commands.sty
+++ b/doc/_static/mylatex-commands.sty
@@ -2,6 +2,7 @@
 \renewcommand{\u}[1]{\,\text{#1}}
 \newcommand{\transpose}[1]{{#1}^{\text{T}}}
 \newcommand{\grad}{\nabla}
+\newcommand{\diverg}{\nabla\cdot}
 
 \renewcommand{\d}{\,\operatorname{d}}
 \newcommand{\e}{\operatorname{e}}
