updated install instructions, few references

--- a/doc/libgimli.bib
+++ b/doc/libgimli.bib
@@ -1,48 +1,61 @@
-% This file was created with JabRef 2.6.
+% This file was created with JabRef 2.10.
 % Encoding: UTF8
 
-@ARTICLE{GuentherRueSpi2006,
-  author = {Thomas Günther and Carsten Rücker and Klaus Spitzer},
-  title = {{T}hree-dimensional modelling and inversion of dc resistivity data
-	incorporating topography -- {II}. {I}nversion},
-  journal = {Geophys. J. Int.},
-  year = {2006},
-  volume = {166},
-  pages = {506--517},
-  number = {2},
-  file = {GuentherRueSpi2006.pdf:all/GuentherRueSpi2006.pdf:PDF},
-  owner = {carsten},
-  printout = {yes},
-  timestamp = {2012.04.11}
+
+@Article{GuentherRueSpi2006,
+  Title                    = {{T}hree-dimensional modelling and inversion of dc resistivity data incorporating topography -- {II}. {I}nversion},
+  Author                   = {Thomas Günther and Carsten Rücker and Klaus Spitzer},
+  Journal                  = {Geophys. J. Int.},
+  Year                     = {2006},
+  Number                   = {2},
+  Pages                    = {506--517},
+  Volume                   = {166},
+
+  File                     = {GuentherRueSpi2006.pdf:all/GuentherRueSpi2006.pdf:PDF},
+  Owner                    = {carsten},
+  Printout                 = {yes},
+  Timestamp                = {2012.04.11}
 }
 
-@ARTICLE{RueckerGuen2011,
-  author = {Carsten Rücker and Thomas Günther},
-  title = {{T}he simulation of finite {ERT} electrodes using the complete electrode
-	model},
-  journal = {Geophysics},
-  year = {2011},
-  volume = {76},
-  pages = {F227-F238},
-  number = {4},
-  doi = {10.1190/1.3581356},
-  file = {RueckerGuen2011.pdf:all/RueckerGuen2011.pdf:PDF},
-  owner = {carsten},
-  timestamp = {2010.08.23}
+@InProceedings{RueckerGueWag2015,
+  Title                    = {{PyGIMLi - Eine Open Source Python Bibliothek zur Inversion und Modellierung in der Geophysik}},
+  Author                   = {Carsten R\"{u}cker and Thomas G\"{u}nther and Florian Wagner},
+  Booktitle                = {{75. Jahrestagung der Deutschen Geophysikalischen Gesellschaft (DGG), Hannover 2015}},
+  Year                     = {2015},
+
+  Date                     = {2012},
+  Keywords                 = {550 - Earth sciences},
+  Owner                    = {fwagner},
+  Timestamp                = {2015.03.26}
 }
 
-@ARTICLE{RueckerGueSpi2006,
-  author = {C. Rücker and T. Günther and K. Spitzer},
-  title = {{T}hree-dimensional modelling and inversion of dc resistivity data
-	incorporating topography -- {I}. {M}odelling},
-  journal = {Geophys. J. Int.},
-  year = {2006},
-  volume = {166},
-  pages = {495--505},
-  number = {2},
-  file = {RueckerGueSpi2006.pdf:all/RueckerGueSpi2006.pdf:PDF},
-  owner = {carsten},
-  printout = {yes},
-  timestamp = {2012.04.11}
+@Article{RueckerGuen2011,
+  Title                    = {{T}he simulation of finite {ERT} electrodes using the complete electrode model},
+  Author                   = {Carsten Rücker and Thomas Günther},
+  Journal                  = {Geophysics},
+  Year                     = {2011},
+  Number                   = {4},
+  Pages                    = {F227-F238},
+  Volume                   = {76},
+
+  Doi                      = {10.1190/1.3581356},
+  File                     = {RueckerGuen2011.pdf:all/RueckerGuen2011.pdf:PDF},
+  Owner                    = {carsten},
+  Timestamp                = {2010.08.23}
+}
+
+@Article{RueckerGueSpi2006,
+  Title                    = {{T}hree-dimensional modelling and inversion of dc resistivity data incorporating topography -- {I}. {M}odelling},
+  Author                   = {C. Rücker and T. Günther and K. Spitzer},
+  Journal                  = {Geophys. J. Int.},
+  Year                     = {2006},
+  Number                   = {2},
+  Pages                    = {495--505},
+  Volume                   = {166},
+
+  File                     = {RueckerGueSpi2006.pdf:all/RueckerGueSpi2006.pdf:PDF},
+  Owner                    = {carsten},
+  Printout                 = {yes},
+  Timestamp                = {2012.04.11}
 }
 
