fix hybrid example

--- a/doc/_static/mylatex-commands.sty
+++ b/doc/_static/mylatex-commands.sty
@@ -10,7 +10,9 @@
 
 \newcommand{\fourierT}{\multimap}
 \newcommand{\ifourierT}{\multimap_{\text{I}}}
+\newcommand{\unit}[1]{\,\text{#1}}
 
 \renewcommand{\d}{\,\operatorname{d}}
 \renewcommand{\u}[1]{\,\text{#1}}
 \renewcommand{\i}{\operatorname{i}}
+
