sphinx build up with sphinx-gallery

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,2 @@
-Carsten Rücker: carsten@resistivity.net
-Thomas Günther: thomas@resistivity.net
+Carsten RÃ¼cker: carsten@resistivity.net
+Thomas GÃ¼nther: thomas@resistivity.net
