try jenkins fix

--- a/doc/gimliuses.bib
+++ b/doc/gimliuses.bib
@@ -4,7 +4,7 @@
 
 @Article{costabel2014VZJ,
   Title                    = {{N}oninvasive {E}stimation of {W}ater {R}etention {P}arameters by {O}bserving the {C}apillary {F}ringe with {M}agnetic {R}esonance {S}ounding},
-  Author                   = {Stephan Costabel and Thomas G\"unther},
+  Author                   = {Stephan Costabel and Thomas G{\"u}nther},
   Journal                  = {Vadose Zone Journal},
   Year                     = {2014},
   Number                   = {6},
@@ -46,7 +46,7 @@
 
 @InProceedings{ullmann2014,
   Title                    = {{G}eophysical investigation at the {E}lbe estuary as basis for hydrogeological modelling},
-  Author                   = {Ullmann, A., Kaiser, I., Günther, T., Steuer, A., Wiederhold, H.},
+  Author                   = {Ullmann, A. and Kaiser, I. and G{\"u}nther, T. and Steuer, A. and Wiederhold, H.},
   Booktitle                = {Ext. Abstr. 22nd EM Induction Workshop, Weimar, Germany.},
   Year                     = {2014},
 
